[kcms/keys] Really ignore unknown action

Summary:
Otherwise the end() iterator is dereferenced resulting in a crash
BUG: 421016

Test Plan: Import a predefined scheme

Reviewers: ngraham, #plasma, mart

Reviewed By: ngraham, #plasma, mart

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D29579